--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="button">
-        <button id="play">Play your move</button>
+        <button id="msg">Choose one from above</button>
     </div>
 <script src="script.js"></script>
 </body>
